--- a/Soutane/Soutane.css
+++ b/Soutane/Soutane.css
@@ -20,3 +20,11 @@
     font-style: italic;
 
 }
+
+@font-face {
+    font-family: 'soutaneregular';
+    src: url('soutane_regular-webfont.woff2') format('woff2');
+    font-weight: normal;
+    font-style: regular;
+
+}
