--- a/Music Warrior Font/musicwarrior.css
+++ b/Music Warrior Font/musicwarrior.css
@@ -3,7 +3,7 @@
 
 
 @font-face {
-    font-family: 'music_warriorregular';
+    font-family: 'musicwarrior';
     src: url('music_warrior-webfont.woff2') format('woff2');
     font-weight: normal;
     font-style: normal;
